# guicons

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  e2e.yml  release-crates.yml  release-plugin.yml
.github/workflows/scripts/: publish-if-new.sh
crates/guicons/: Cargo.toml
crates/guicons-build/: Cargo.toml
crates/guicons-build/benches/: codegen.rs
crates/guicons-build/src/: generate.rs  lib.rs  materialize.rs  paths.rs
crates/guicons-build/src/generate/: mod.rs  rust.rs  shared.rs  slint.rs
crates/guicons-build/src/generate/snapshots/: guicons_build__generate__tests__family_with_a_different_variant_set_per_size_gets_distinct_types.snap  guicons_build__generate__tests__family_with_variants_only_is_a_two_tier_builder.snap  guicons_build__generate__tests__sizeless_icon_sharing_a_family_with_sized_ones_gets_a_default_method.snap
crates/guicons-build/src/snapshots/: guicons_build__generate__tests__family_with_a_shared_variant_set_across_sizes.snap  guicons_build__generate__tests__family_with_a_single_icon_per_size_skips_the_variant_builder.snap  guicons_build__generate__tests__family_without_variant_or_size_is_a_bare_fn.snap
crates/guicons-build/tests/: fixture_crates.rs
crates/guicons-build/tests/fixtures/basic-file-variants/: Cargo.toml  build.rs  icons.gui.toml
crates/guicons-build/tests/fixtures/basic-file-variants/icons/: extra.gui.toml
crates/guicons-build/tests/fixtures/basic-file-variants/src/: lib.rs
crates/guicons-build/tests/fixtures/basic-file-variants/ui/: main.slint
crates/guicons-cli/: Cargo.toml
crates/guicons-cli/src/: add.rs  check.rs  fetch.rs  lib.rs  main.rs
crates/guicons-cli/tests/: add.rs  e2e.rs  fetch.rs
crates/guicons-core/: Cargo.toml
crates/guicons-core/src/: builtin_providers.gui.toml  diagnostics.rs  graph.rs  iconify_providers.rs  lib.rs  load.rs  manifest_scan.rs  model.rs  naming.rs  parse.rs  paths.rs  rust_macro.rs  selector.rs
crates/guicons-core/src/snapshots/: guicons_core__parse__tests__decompose_bootstrap_style_leading_digit_name_is_not_mistaken_for_size.snap  guicons_core__parse__tests__decompose_fluent_style_size_and_variant.snap  guicons_core__parse__tests__decompose_material_symbols_style_compound_variant_matches_greedily.snap  guicons_core__parse__tests__decompose_phosphor_style_bare_default_has_no_suffix.snap  guicons_core__parse__tests__decompose_phosphor_style_with_variant_suffix.snap  guicons_core__parse__tests__default_provider_fills_in_iconify_id.snap  guicons_core__parse__tests__defaults_fall_back_to_manifest_and_workspace_dirs_when_empty.snap  guicons_core__parse__tests__defaults_merge_root_and_roots.snap  guicons_core__parse__tests__defaults_reject_unsupported_field.snap  guicons_core__parse__tests__defaults_reject_wrong_field_type.snap  guicons_core__parse__tests__explicit_iconify_overrides_default_provider.snap  guicons_core__parse__tests__explicit_size_feeds_default_iconify_id.snap  guicons_core__parse__tests__mixing_own_fields_with_override_is_an_error.snap  guicons_core__parse__tests__nested_groups_build_a_dashed_key.snap  guicons_core__parse__tests__no_source_is_an_error.snap  guicons_core__parse__tests__numeric_path_segment_becomes_size_for_flat_entry.snap  guicons_core__parse__tests__numeric_path_segment_becomes_size_not_family.snap  guicons_core__parse__tests__override_on_a_non_builtin_name_is_an_error.snap  guicons_core__parse__tests__parses_multiple_provider_schemas.snap  guicons_core__parse__tests__provider_schema_rejects_wrong_field_type.snap  guicons_core__parse__tests__provider_without_variants_or_sizes_defaults_to_empty.snap  guicons_core__parse__tests__providers_entry_must_be_a_table.snap  guicons_core__parse__tests__redefining_a_builtin_provider_without_override_is_an_error.snap  guicons_core__parse__tests__simple_file_entry.snap  guicons_core__parse__tests__two_sources_is_an_error.snap  guicons_core__parse__tests__unsupported_field_is_rejected.snap  guicons_core__parse__tests__variant_entry_must_be_an_inline_table.snap  guicons_core__parse__tests__variants_must_be_a_table.snap  guicons_core__parse__tests__variants_produce_two_entries_sharing_a_family.snap  guicons_core__parse__tests__wrong_field_type_is_rejected.snap
crates/guicons-core/tests/: load.rs
crates/guicons-core/tests/snapshots/: load__cyclic_include_is_reported_and_does_not_hang.snap  load__entries_are_sorted_by_key_across_includes.snap  load__include_merges_child_manifest_entries.snap  load__include_section_must_be_a_table.snap  load__include_target_must_be_a_string.snap  load__link_includes_entries_must_be_strings.snap  load__link_includes_must_be_an_array.snap  load__link_rejects_unknown_fields.snap  load__link_section_must_be_a_table.snap  load__missing_manifest_file_produces_an_error_not_a_panic.snap
crates/guicons-ffi/: Cargo.toml  uniffi-bindgen.rs
crates/guicons-ffi/src/: lib.rs
crates/guicons-lsp/: Cargo.toml
crates/guicons-lsp/src/: completion.rs  diagnostics.rs  goto_definition.rs  hover.rs  iconify_completion.rs  lib.rs  main.rs  manifest_text.rs  position.rs  references.rs  rename.rs
crates/guicons-lsp/tests/: lsp.rs
crates/guicons-macros/: Cargo.toml
crates/guicons-macros/src/: lib.rs
crates/guicons-net/: Cargo.toml
crates/guicons-net/src/: lib.rs
crates/guicons/examples/: iced_icon.rs  slint_icon.rs
crates/guicons/src/: build.rs  iced.rs  lib.rs  slint.rs
crates/guicons/tests/: fixture_crates.rs
crates/guicons/tests/fixtures/basic-file-variants/: Cargo.toml  build.rs
crates/guicons/tests/fixtures/basic-file-variants/src/: lib.rs
ide-plugin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
ide-plugin/src/main/kotlin/dev/guicons/ideaplugin/: GuiconsDocumentationProvider.kt  GuiconsLspServerSupportProvider.kt  GuiconsPsiDocumentationTargetProvider.kt  GuiconsQuickDocAction.kt  IconBrowserPopup.kt  IconBrowserScope.kt  IconBrowserStartupActivity.kt  IconBrowserToolWindowFactory.kt  IconDocRenderer.kt  IconInsertion.kt  IconPreviewCache.kt  (+3 more)
ide-plugin/src/main/kotlin/uniffi/guicons_ffi/: guicons_ffi.kt
