[workspace]
members = ["crates/guicons", "crates/guicons-build", "crates/guicons-cli", "crates/guicons-core", "crates/guicons-ffi", "crates/guicons-lsp", "crates/guicons-macros", "crates/guicons-net"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
