[package]
name = "guicons-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "build.rs codegen: parses icons.gui.toml, materializes assets, generates Rust/Slint registries"

[dependencies]
guicons-core = { path = "../guicons-core", version = "0.2.0" }
guicons-net = { path = "../guicons-net", version = "0.2.0" }
pathdiff = "0.2.3"

[dev-dependencies]
insta = "1.48.0"
tempfile = "3.23.0"
criterion = "0.5"

[[bench]]
name = "codegen"
harness = false
