[package]
name = "guicons-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for editing icons.gui.toml and populating the icon cache"

[[bin]]
name = "icons"
path = "src/main.rs"

[dependencies]
guicons-core = { path = "../guicons-core", version = "0.2.0" }
guicons-net = { path = "../guicons-net", version = "0.2.0" }
toml_edit = "0.25"
clap = { version = "4", features = ["derive"] }
tempfile = "3.27.0"
miette = { version = "7", features = ["fancy"] }

[dev-dependencies]
tiny_http = "0.12.0"
