[package]
name = "guicons-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core manifest model and parser for guicons"

[dependencies]
dunce = "1.0.5"
petgraph = "0.6"
syn = { version = "2", default-features = false, features = ["parsing", "printing"] }
toml-span = "0.7"
walkdir = "2"
winnow = "0.7.13"

[dev-dependencies]
insta = { version = "1.48.0", features = ["filters"] }
proptest = "1.11.0"
tempfile = "3.27.0"
