[package]
name = "guicons-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UniFFI bindings exposing guicons-core's icon!/icon_key!/icon_data! detection and resolution logic to non-Rust consumers (currently: ../ide-plugin's Kotlin/JVM side)"

[lib]
crate-type = ["cdylib", "lib"]
name = "guicons_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi/cli"]

[dependencies]
guicons-core = { path = "../guicons-core" }
guicons-net = { path = "../guicons-net" }
tokio = { version = "1", features = ["rt-multi-thread"] }
uniffi = { version = "0.28", features = ["tokio"] }

[dev-dependencies]
tempfile = "3.27.0"
