[package]
name = "guicons-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language server for icons.gui.toml"

[[bin]]
name = "guicons-lsp"
path = "src/main.rs"

[dependencies]
guicons-core = { path = "../guicons-core" }
guicons-net = { path = "../guicons-net" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
serde_json = "1"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
tower = "0.4"
