[package]
name = "guicons-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for guicons"

[lib]
proc-macro = true

[features]
slint = []
iced = []

[dependencies]
guicons-core = { path = "../guicons-core", version = "0.1.0" }
guicons-net = { path = "../guicons-net", version = "0.1.0" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["parsing", "proc-macro"] }
