[package]
name = "guicons-net"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Icon cache resolution and network fetch for guicons"

[dependencies]
dirs = "6.0.0"
guicons-core = { path = "../guicons-core", version = "0.2.0" }
hex = "0.4.3"
serde_json = "1"
sha2 = "0.10.9"
ureq = "2.12.1"
