[package]
name = "guicons"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Manifest-driven icon system for native Rust GUI applications"

[features]
default = ["macros"]
macros = ["dep:guicons-macros"]
slint = ["dep:slint"]

[dependencies]
guicons-macros = { path = "../guicons-macros", optional = true }
slint = { version = "1.15.1", optional = true }
