[package]
name = "guicons"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Manifest-driven icon system for native Rust GUI applications"

[features]
default = ["macros"]
macros = ["dep:guicons-macros"]
slint = ["dep:slint", "dep:image", "guicons-macros?/slint"]
iced = ["dep:iced", "guicons-macros?/iced"]

[dependencies]
guicons-macros = { path = "../guicons-macros", version = "0.2.0", optional = true }
slint = { version = "1.15.1", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
iced = { version = "0.14", optional = true, features = ["svg", "image"] }

[[example]]
name = "slint_icon"
required-features = ["slint"]

[[example]]
name = "iced_icon"
required-features = ["iced"]
