[package]
name = "guicons-fixture-basic-file-variants"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[dependencies]
guicons = { path = "../../../../guicons", features = ["slint"] }
slint = "1.15.1"

[build-dependencies]
guicons-build = { path = "../../../../guicons-build" }
slint-build = "1.15.1"
